added typewriter effect, added pro-card files

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <h1>Per Scholas Cohort AWSRT04!</h1>
     <img src="./perscholas.jpeg" alt="Per Scholas Picture">
+    <h1 id="back"></h1>
 
     <div class="container"> </div>
 
-    <script type="text/javascript"src="script.js"></script>
+    <script type="text/javascript"src="script.js" async></script>
+    <script src="bkspc.js" defer></script>
 </body>
 </html>
