--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
     
 </head>
 <body>
     <h1>Per Scholas Cohort AWSRT04!</h1>
-    <img src="./perscholas.jpeg" alt="Per Scholas Picture">
-    <h1 id="back"></h1>
+    <img class="pspic" src="./perscholas.jpeg" alt="Per Scholas Picture">
+    <h1 id="backs">We are <span id="back"></span></h1>
 
     <div class="container"> </div>
 
     <script type="text/javascript"src="script.js" async></script>
-    <script src="bkspc.js" defer></script>
+    
 </body>
 </html>
